--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stackblitz/sdk": "^1.11.0",
     "@webcontainer/api": "^1.1.9",
+    "@webcontainer/env": "^1.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
